2008-08-04  Tor Lillqvist  <tml@novell.com>

	* tests/testglib.c: Avoid warning on Win64 by using gintptr cast
	instead if long cast.

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.6 ===

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.17.5 ===

	* NEWS: Updates

2008-08-02  Tor Lillqvist  <tml@novell.com>

	* glibconfig.h.win32.in: Add gintptr and guintptr typedefs here,
	too, appropriately ifdeffed for 32/64 bit, gcc/MSVC. Add 64-bit
	versions of GPOINTER_TO_INT(), GPOINTER_TO_UINT() and vice versa,
	too.
	
2008-08-01  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates
	
2008-08-01  Matthias Clasen  <mclasen@redhat.com>

	Bug 545798 – "Since: 2.18" mark is missing in g_set_error_literal
	documentation

	* glib/gerror.c (g_set_error_literal): Add a Since: marker.
	Pointed out by Kouhei Sutou

2008-07-30  Tor Lillqvist  <tml@novell.com>

	Bug 545485 - Implicit declaration of utime()

	* glib/gstdio.c: Include <utime.h> on POSIX.

2008-07-28  Tor Lillqvist  <tml@novell.com>

	* configure.in: Output to glibconfig.h typedefs for gintptr as the
	signed integer type that can hold a pointer, and guintptr as the
	corresponding unsigned type. These types are portable equivalents
	to intptr_t and uintptr_t which are not available in all
	compilers.

	For all current platforms, they will presumably end up as the same
	types as gssize and gsize, but in theory size_t can be smaller
	than intptr_t. Also, the intended use case for gintptr and
	guintptr is different from that of gssize and gsize. As the name
	indicates, gintptr is for when one wants an integer type that can
	hold a pointer, and gsize is for when one wants an integer type
	that can hold the value of the sizeof operator.

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 544465 – gmarkup makes it hard to use pre-rolled parsers
